--- a/DevAccelerate.ClassGenerator/DevAccelerate.ClassGenerator.csproj
+++ b/DevAccelerate.ClassGenerator/DevAccelerate.ClassGenerator.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReplaceNameInFiles.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
